remove deprecated methods

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <service android:name=".ActivityIntentService"
-                 android:exported="false"/>
+        <service android:name=".ActivityIntentService"/>
     </application>
 
 </manifest>
